--- a/styles/main.scss
+++ b/styles/main.scss
@@ -12,7 +12,7 @@ header {
     padding: 0 15px; /* 포지션 때문에 마진값이 적용되지 않는다 */
     @include flex-row;
     
-    h1 {background-color: bisque;
+    h1 {/* background-color: bisque; */
         width: 150px;
         a {
             img {width: 100%;}
@@ -21,10 +21,10 @@ header {
     .right {
         display: flex; flex-flow: row nowrap;
         align-items: center;
-        .app {font-family: $font-jua; font-weight: 700;
-        border: 2px solid #fff; padding: 15px 25px; border-radius: 20px; margin-right: 20px;
+        .app {font-family: $font-jua; font-weight: 600; 
+        border: 2px solid #fff; padding: 15px 25px; border-radius: 20px; margin-right: 20px; color: #fff;
         }
-        .menu {background-color: bisque;
+        .menu {/* background-color: bisque; */
             display: flex; flex-flow: column nowrap;
             span {
                 display: inline-block; width: 30px; height: 5px; background-color:#000;
@@ -34,30 +34,88 @@ header {
             
         }
     }
-}
-
+}//e:header
 main {background-color: bisque;
-    
-    
-    .visual {text-align: center; margin: 0 auto;
+    .visual {
+        text-align: center; margin: 0 auto; height: 100vh; overflow: hidden;
+        position: relative;
+        }
         .container {
-            position: absolute; top: 50%; left: 50%; z-index: 20;
+            position: absolute; top: 45%; left: 50%; z-index: 110;
             transform: translate(-50%, -50%);
             h1 {
                 font-family: $font-jua; font-weight: 500;
                 font-size: 3rem; color: #fff; line-height: 1.5em; letter-spacing: -0.02em;
             }
             p {
-                color: #fff; line-height: 1.5em;
+                color: #fff; line-height: 1.5em; margin: 10px 0 60px;
             }
-            .app {}
+            .app { 
+                font-family: $font-jua; font-weight: 500; font-size: 1.5rem;
+                border-radius: 30px; background-color: #fff; 
+                padding: 20px 100px;
+            }
         }
-        video {
-            position: absolute; top: 0; left: 0; z-index: 10;
-        width: 100%; 
+        video {width: 130%; position: absolute;top: 0;left: 50%; z-index: 10;
+            transform:translate(-50%,0);
         }
-        .down {position: absolute; bottom: 0; left: 50%; z-index: 20;
+        .down {
+            position: absolute; bottom: 100px; left: 0; z-index: 110; text-align: center;  width: 100%;
             img {}
         }
+    .visual::before {
+        display: block;
+        background:linear-gradient(0deg, rgba(0,0,0,0.5), transparent) ;
+        width: 100%;height: 100%; content: ''; position: absolute;top: 0; left: 0; z-index: 105;
+    }//e:visual
+    .event {background-color: aqua;
+        width: 1200px; margin: 0 auto;
+        .text {margin: 100px 0; background-color: brown;
+            h1 {
+                font-family: $font-jua; font-weight: 500;
+                font-size: 3rem; color: #fff; line-height: 1.5em; letter-spacing: -0.02em;
+            }
+            p {color: #fff; line-height: 1.5em;}
+            a {
+                display: flex; flex-flow: row nowrap;
+                align-items: center; font-size: 0.875rem;
+                font-family: $font-jua; font-weight: 600; 
+                span {}
+                img {}
+            }
+        }
+        .slide_wrap {
+            .slide_container {
+                display: grid; 
+                grid-template-columns: repeat(3,1fr);
+                grid-template-rows: 320px;
+                .slide {
+                    margin-right: 5px; padding: 10px;
+                    background-repeat: no-repeat center;
+                    background-size: 60%;
+                    background-position: right bottom;
+                    border-radius: 30px;
+                    h2 {
+                        font-family: $font-jua; font-weight: 500;
+                font-size: 2rem; line-height: 1.5em; letter-spacing: -0.02em;
+                    }
+                    p {}
+                    a {
+                        img {}
+                    }
+                }
+                .slide1 {
+                    background: #ffe552 url(../images/event_image_0_20221028085348_35465.png);
+                    
+                }
+                .slide2 {
+                    background: #b2e9de url(../images/event_image_0_20221028085704_61822.png);
+                }
+                .slide3 {background: #ffcfd8 url(../images/event_image_3_20221105015010_49282.png);
+                }
+            }
+        }
+
     }
+
 }
